# mini-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: quality.yml
.scratch/implement-mini-agent-mvp/issues/: 01-bootstrap-an-installable-text-only-agent.md  02-establish-offline-quality-gates-and-distributable-artifacts.md  03-persist-list-and-resume-text-only-sessions.md  04-assemble-trusted-configuration-instructions-and-context-frames.md  05-stream-a-real-openai-compatible-text-response.md  06-let-the-fake-driven-agent-read-and-search-a-confined-workspace.md  07-apply-confirmed-transactional-file-changes.md  08-run-bounded-shell-commands-under-permission-policy.md  09-complete-bounded-serial-multi-tool-coding-turns.md  10-store-and-reread-large-tool-results-as-immutable-artifacts.md  11-compact-long-sessions-without-losing-observable-state.md  12-cancel-retry-and-diagnose-failed-turns-safely.md  13-reconcile-interrupted-work-on-resume.md  14-deliver-the-production-conversational-cli.md  15-audit-the-packaged-mvp-against-the-acceptance-matrix.md  16-fail-production-startup-when-provider-authentication-is-unavailable.md  17-deny-non-interactive-permission-prompts-deterministically.md  18-preserve-unknown-tool-calls-as-invalid-results.md  19-report-only-successful-shell-verification.md  20-normalize-provider-usage-after-completed-tool-calls.md
.scratch/mini-agent-mvp/: map.md
.scratch/mini-agent-mvp/issues/: 01-research-claude-code-public-architecture.md  02-design-agent-loop-and-runtime-state-machine.md  03-design-tools-workspace-and-permissions.md  04-design-context-and-session-event-model.md  05-prototype-the-cli-interaction.md  06-define-project-structure-tests-and-acceptance.md  07-design-prompt-assembly-and-configuration-precedence.md  08-design-streaming-failures-and-recovery.md  09-design-packaging-installation-versioning-and-release.md  10-assemble-and-audit-the-implementation-ready-mvp-specification.md
.scratch/prototypes/cli-interaction/: README.md  cli.py  state.py  transcript_variants.py
docs/: openai-compatible-provider.md
docs/adr/: 0001-full-auto-code-work-commands.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/research/: capability-test-protocol.md  claude-code-public-architecture.md  context-frame-provenance.md  explicit-plan-mode.md  full-auto-code-work-command-boundary.md  mini-agent-capability-boundary-report.md  numeric-permission-confirmation-contract.md  representative-self-hosting-task-cards.md
docs/research/capability-trials/: ambiguous-prompt.txt  ambiguous-results.md  full-auto-results.md  full-auto-synthesis.md  full-auto-unrestricted-results.md  pc01-prompt.txt  pc01-results.md  pc01_oracle.py  permission-modes-results.md  recovery-results.md  rl01-results.md  rl02-results.md  rl02_harness.py  sh01_oracle.py  (+4 more)
docs/specs/: mini-agent-mvp.md
docs/task-lab/: python-fixtures.md
manual_tests/ticket09/: README.md
scripts/: build_artifacts.py  check_artifacts.py  prepare_manual_acceptance.py  smoke_artifacts.py
src/mini_agent/: __init__.py  __main__.py  configuration.py  context.py  diagnostics.py  instructions.py
tests/: remediation_support.py  test_agent_tools.py  test_cli.py  test_manual_acceptance.py  test_plan_mode.py  test_ports.py  test_provider.py  test_remediation_acceptance.py  test_remediation_support.py  test_sessions.py  test_ticket04.py  test_ticket07.py  test_ticket08.py  test_ticket09.py  test_ticket10.py  test_ticket11.py  test_ticket12.py  test_ticket12_presentation.py  test_ticket13.py  test_ticket14.py  test_ticket16.py  test_ticket17.py  test_ticket18.py  test_ticket19.py  test_tools.py  test_turn.py
(+243 files in other folders)
