[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "mini-agent"
version = "0.1.0"
description = "An independent, educational terminal coding agent."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Mini Agent contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "rich>=13.7,<15",
  "typer>=0.16,<1",
]

[project.scripts]
mini-agent = "mini_agent.cli.app:main"

[project.urls]
Homepage = "https://github.com/teleno1/mini-agent"
Repository = "https://github.com/teleno1/mini-agent"
Issues = "https://github.com/teleno1/mini-agent/issues"
Changelog = "https://github.com/teleno1/mini-agent/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
  "hatchling>=1.25,<2",
  "mypy>=1.13,<2",
  "pytest>=8,<10",
  "pytest-asyncio>=0.23,<2",
  "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mini_agent"]

[tool.hatch.build.targets.wheel.force-include]
"README.md" = "README.md"
"LICENSE" = "LICENSE"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = [
  "/src",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]
exclude = [
  "/.env*",
  "/.git",
  "/.gitignore",
  "/.mini-agent",
  "/.scratch",
  "/tests",
  "/**/*.key",
  "/**/*.pem",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".scratch", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["mini_agent"]
mypy_path = "src"
